# pyrenees

./: .gitignore  pyproject.toml
pyrenees/: main.py
pyrenees/src/: buffer.py  config.py  io.py
pyrenees/src/styles/: main_styles.tcss
pyrenees/src/widgets/: basic.py
pyvim/src/: buffer.py
